# orion-general

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE_DESKTOP_SETUP.md  FILE_REFERENCE.md  GITHUB_ADVANCED_IMPROVEMENTS.md  GUIA_RAILWAY.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  ROUND4_IMPROVEMENTS.md  ROUND5_IMPROVEMENTS.md  claude_desktop_config.json  index.html  manifest.json  orion_boot.py  orion_cloud_server.py  orion_mcp_server.py  orion_mcp_server_http.py  orion_web_server.py  pyproject.toml  qa_report.txt  railway.json  requirements.txt  requirements_cloud.txt  script.js  setup_claude_desktop.py  start_orion.py  styles.css  test_api.py
cloud/: Dockerfile.cloud  GUIA_SIMPLIFICADO.md  ORACLE_FREE_GUIDE.md  PASSOS.md  README_CLOUD.md  auto_setup.ps1  deploy.sh  docker-compose.cloud.yml  oracle_free_deploy.sh  requirements.txt  setup_remote.sh  ssl_setup.sh  vps_setup.sh
docker/: Dockerfile  docker-compose.yml
kubernetes/: deployment.yaml
orion/: __init__.py  a2a_protocol.py  agent_health_monitor.py  agent_reputation.py  agent_state_machine.py  agents.py  audit_trail.py  autonomous_learning.py  backup_system.py  checkpointing.py  code_execution.py  conflict_resolution.py  consensus_engine.py  context_manager.py  conversation_sync.py  cost_engineering.py  daemon.py  data_retention.py  embeddings.py  episodic_memory.py  evaluation.py  events.py  evolutionary_skills.py  federated_memory.py  github_sync.py  goal_planner.py  guardrails.py  human_in_the_loop.py  idle_processor.py  memory.py  (+42 more)
(+30 files in other folders)
