[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "orion-system"
version = "1.0.0"
description = "ORION - Multi-agent system for reading game and memory management"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["orion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
